--- a/index.html
+++ b/index.html
@@ -9,30 +9,54 @@
       text-align: center;
       background-color: #ffcc8e;
       font-family: Helvetica, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    .section {
+      background: rgba(99, 99, 99, 0.616);
+      width: 90%;
+      max-width: 400px;
+      margin: 40px auto;
+      border: 1px solid;
+      border-radius: 10px;
+    }
+
+    .content {
+      padding: 20px;
+    }
+
+    h1, h3, p {
+      color: white;
+      margin: 10px 0;
+    }
+
+    .codigo {
+      word-break: break-word;
+      font-size: 1rem;
+      margin: 20px 0;
     }
 
     .button {
       position: relative;
       display: inline-block;
-      margin: 20px;
+      margin: 20px auto;
     }
 
     .button a {
       color: white;
       font-weight: bold;
-      font-size: 36px;
+      font-size: 24px;
       text-align: center;
       text-decoration: none;
       background-color: #FFA12B;
       display: block;
-      position: relative;
-      padding: 20px 40px;
+      padding: 15px 30px;
       cursor: pointer;
 
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       text-shadow: 0px 1px 0px #000;
       filter: dropshadow(color=#000, offx=0px, offy=1px);
-
       box-shadow: inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
       border-radius: 5px;
     }
@@ -56,28 +80,7 @@
       border-radius: 5px;
     }
 
-    .section {
-      background: rgba(99, 99, 99, 0.616);
-      max-width: 40%;
-      margin: auto;
-      align-items: center;
-      border: 1px solid;
-      border-radius: 10px;
-    }
-
-    .content {
-      margin: 5%;
-    }
-
-    h1, h3, p {
-      color: white;
-    }
-
-    .codigo {
-      word-break: break-all;
-    }
-
-    /* Notificação flutuante */
+    /* Toast */
     .toast {
       position: fixed;
       top: 20px;
@@ -93,6 +96,18 @@
 
     .toast.show {
       opacity: 1;
+    }
+
+    /* Responsividade */
+    @media (max-width: 500px) {
+      .button a {
+        font-size: 18px;
+        padding: 12px 20px;
+      }
+
+      .codigo {
+        font-size: 0.95rem;
+      }
     }
   </style>
 </head>
@@ -110,9 +125,7 @@
     </div>
   </div>
 
-  <!-- Toast sobreposto -->
-  <div id="toast" class="toast">Código copiado! <br> Agora cole ele na resposta do seu form</div>
-  <div id="toast" class="toast-um"></div>
+  <div id="toast" class="toast">Código copiado!</div>
 
   <script>
     function copyToClickBoard() {
@@ -131,7 +144,7 @@
       toast.classList.add('show');
       setTimeout(() => {
         toast.classList.remove('show');
-      }, 2000); // visível por 2 segundos
+      }, 2000);
     }
   </script>
 
