--- a/index.html
+++ b/index.html
@@ -9,59 +9,33 @@
       text-align: center;
       background-color: #ffcc8e;
       font-family: Helvetica, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    .section {
-      background: rgba(99, 99, 99, 0.616);
-      width: 90%;
-      max-width: 400px;
-      margin: 40px auto;
-      border: 1px solid;
-      border-radius: 10px;
-    }
-
-    .content {
-      padding: 20px;
-    }
-
-    h1, h3, p {
-      color: white;
-      margin: 10px 0;
-    }
-
-    .codigo {
-      word-break: break-word;
-      font-size: 1rem;
-      margin: 20px 0;
     }
 
     .button {
       position: relative;
       display: inline-block;
-      margin: 20px auto;
+      margin: 20px;
     }
 
-    .button a {
+    .button button {
       color: white;
       font-weight: bold;
       font-size: 24px;
       text-align: center;
-      text-decoration: none;
       background-color: #FFA12B;
       display: block;
       padding: 15px 30px;
       cursor: pointer;
+      border: none;
+      position: relative;
 
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       text-shadow: 0px 1px 0px #000;
-      filter: dropshadow(color=#000, offx=0px, offy=1px);
       box-shadow: inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
       border-radius: 5px;
     }
 
-    .button a:active {
+    .button button:active {
       top: 10px;
       background-color: #F78900;
       box-shadow: inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
@@ -80,7 +54,34 @@
       border-radius: 5px;
     }
 
-    /* Toast */
+    .section {
+      background: rgba(99, 99, 99, 0.616);
+      max-width: 90%;
+      margin: auto;
+      align-items: center;
+      border: 1px solid;
+      border-radius: 10px;
+    }
+
+    @media (min-width: 600px) {
+      .section {
+        max-width: 40%;
+      }
+    }
+
+    .content {
+      margin: 5%;
+    }
+
+    h1, h3, p {
+      color: white;
+    }
+
+    .codigo {
+      word-break: break-word;
+      font-size: 16px;
+    }
+
     .toast {
       position: fixed;
       top: 20px;
@@ -97,18 +98,6 @@
     .toast.show {
       opacity: 1;
     }
-
-    /* Responsividade */
-    @media (max-width: 500px) {
-      .button a {
-        font-size: 18px;
-        padding: 12px 20px;
-      }
-
-      .codigo {
-        font-size: 0.95rem;
-      }
-    }
   </style>
 </head>
 <body>
@@ -120,7 +109,7 @@
       <p id="codigoid" class="codigo">M8Bgb6qZDx2jH?-2(7-1B95M}Jn_45=O+M1o5i\NS@U,PaC>sy</p>
 
       <div class="button">
-        <a href="javascript:void(0)" onclick="copyToClickBoard()">Copiar</a>
+        <button onclick="copyToClickBoard()">Copiar</button>
       </div>
     </div>
   </div>
