--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       text-align: center;
       background-color: #ffcc8e;
       font-family: Helvetica, sans-serif;
+
+      /* Habilita :active no iOS */
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      touch-action: manipulation;
     }
 
     .button {
@@ -17,25 +23,28 @@
       margin: 20px;
     }
 
-    .button button {
+    .button a {
       color: white;
       font-weight: bold;
-      font-size: 24px;
+      font-size: 36px;
       text-align: center;
+      text-decoration: none;
       background-color: #FFA12B;
       display: block;
-      padding: 15px 30px;
-      cursor: pointer;
-      border: none;
       position: relative;
+      padding: 20px 40px;
+      cursor: pointer;
 
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       text-shadow: 0px 1px 0px #000;
+      filter: dropshadow(color=#000, offx=0px, offy=1px);
+
       box-shadow: inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
       border-radius: 5px;
+      transition: top 0.1s ease;
     }
 
-    .button button:active {
+    .button a:active {
       top: 10px;
       background-color: #F78900;
       box-shadow: inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
@@ -58,15 +67,8 @@
       background: rgba(99, 99, 99, 0.616);
       max-width: 90%;
       margin: auto;
-      align-items: center;
       border: 1px solid;
       border-radius: 10px;
-    }
-
-    @media (min-width: 600px) {
-      .section {
-        max-width: 40%;
-      }
     }
 
     .content {
@@ -78,8 +80,7 @@
     }
 
     .codigo {
-      word-break: break-word;
-      font-size: 16px;
+      word-break: break-all;
     }
 
     .toast {
@@ -98,6 +99,25 @@
     .toast.show {
       opacity: 1;
     }
+
+    @media screen and (max-width: 600px) {
+      .button a {
+        font-size: 24px;
+        padding: 15px 30px;
+      }
+
+      .section {
+        max-width: 95%;
+      }
+
+      .toast {
+        left: 10px;
+        right: 10px;
+        top: auto;
+        bottom: 20px;
+        text-align: center;
+      }
+    }
   </style>
 </head>
 <body>
@@ -109,7 +129,7 @@
       <p id="codigoid" class="codigo">M8Bgb6qZDx2jH?-2(7-1B95M}Jn_45=O+M1o5i\NS@U,PaC>sy</p>
 
       <div class="button">
-        <button onclick="copyToClickBoard()">Copiar</button>
+        <a href="javascript:void(0)" onclick="copyToClickBoard()">Copiar</a>
       </div>
     </div>
   </div>
@@ -135,6 +155,9 @@
         toast.classList.remove('show');
       }, 2000);
     }
+
+    // Habilita o estado :active em iOS
+    document.addEventListener("touchstart", function () {}, true);
   </script>
 
 </body>
