--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
       text-align: center;
       background-color: #ffcc8e;
       font-family: Helvetica, sans-serif;
-
-      /* Habilita :active no iOS */
-      -webkit-touch-callout: none;
       -webkit-user-select: none;
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       touch-action: manipulation;
@@ -34,11 +31,7 @@
       position: relative;
       padding: 20px 40px;
       cursor: pointer;
-
-      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       text-shadow: 0px 1px 0px #000;
-      filter: dropshadow(color=#000, offx=0px, offy=1px);
-
       box-shadow: inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
       border-radius: 5px;
       transition: top 0.1s ease;
@@ -136,12 +129,18 @@
 
   <div id="toast" class="toast">Código copiado!</div>
 
+  <!-- Áudio do clique -->
+  <audio id="clickSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_47e466c1a4.mp3" preload="auto"></audio>
+
   <script>
     function copyToClickBoard() {
       const content = document.getElementById('codigoid').innerText;
+
+      // Copia o texto
       navigator.clipboard.writeText(content)
         .then(() => {
           showToast();
+          playClickSound();
         })
         .catch(err => {
           console.error('Erro ao copiar: ', err);
@@ -156,7 +155,13 @@
       }, 2000);
     }
 
-    // Habilita o estado :active em iOS
+    function playClickSound() {
+      const sound = document.getElementById('clickSound');
+      sound.currentTime = 0;
+      sound.play().catch(err => console.warn("Som bloqueado até interação do usuário."));
+    }
+
+    // Garante que o :active funcione no iOS
     document.addEventListener("touchstart", function () {}, true);
   </script>
 
