Update index.html som de clique

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <div id="toast" class="toast">Código copiado!</div>
 
   <!-- Áudio do clique -->
-  <audio id="clickSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_47e466c1a4.mp3" preload="auto"></audio>
+  <audio id="clickSound" src="clique.mp3" preload="auto"></audio>
 
   <script>
     function copyToClickBoard() {
