--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="content">
       <h1 class="titulo">Seu código</h1>
       <h3 class="informe">Copie o código e cole no formulário 1</h3>
-      <p id="codigoid" class="codigo">M8Bgb6qZDx2jH?-2(7-1B95M}Jn_45=O+M1o5i\NS@U,PaC>sy</p>
+      <p id="codigoid" class="codigo">M8Bgb6qZDx2jH?-2(7-1B95M}Jn_45=O+M1</p>
 
       <div class="button">
         <a href="javascript:void(0)" onclick="copyToClickBoard()">Copiar</a>
