--- a/index2-sdakf.html
+++ b/index2-sdakf.html
@@ -11,7 +11,7 @@
     <div class="content">
       <h1>Seu código</h1>
       <h3>Copie o código e cole no formulário</h3>
-      <p id="codigoid">Lc[2M@BixIRS*y"3|%W^c1Lb?c"80<sus3<</p>
+      <p id="codigoid">1rio61IL6keSFeuGsnDDV0uIyoygOGYjPhM</p>
 
       <div class="button">
         <a href="javascript:void(0)">Copiar</a>
