--- a/index2-sdakf.html
+++ b/index2-sdakf.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Código do Form</title>
+  <title>21/06 – Demonstrar Connect  </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="section">
     <div class="content">
-      <h1>Seu código</h1>
+      <h1>21/06 – Demonstrar Connect  </h1>
       <h3>Copie o código e cole no formulário</h3>
       <p id="codigoid">1rio61IL6keSFeuGsnDDV0uIyoygOGYjPhM</p>
 
