--- a/index10-87dfg.html
+++ b/index10-87dfg.html
@@ -1,65 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Código do Form 1</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>08/07 – EDP</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+  <div class="section">
+    <div class="content">
+      <h1>08/07 – EDP</h1>
+      <h3>Copie o código e cole no formulário</h3>
+      <p id="codigoid">h84rnWsUopr104xzjhSDBn1TJMyn07G3xQs</p>
 
-    <div class="section">
-        <div class="content">
-            <h1 class="titulo">Seu código</h1>
-            <h3 class="informe">Copie o código e cole no formulário 1</h3>
-            <p id="codigoid" class="codigo">bW41ywRr;Je5'@SeA+^O1:YM9}4vo97=A@%</p>
-
-            <div class="button">
-                <a href="javascript:void(0)" onclick="copyToClickBoard()">Copiar</a>
-            </div>
-        </div>
+      <div class="button">
+        <a href="javascript:void(0)">Copiar</a>
+      </div>
     </div>
+  </div>
 
-    <div id="toast" class="toast">Código copiado!</div>
+  <div id="toast" class="toast">Código copiado!</div>
+  <audio id="clickSound" src="clique.mp3" preload="auto"></audio>
 
-    <!-- Áudio do clique -->
-    <audio id="clickSound" src="clique.mp3" preload="auto"></audio>
-
-    <script>
-        function copyToClickBoard() {
-            const content = document.getElementById('codigoid').innerText;
-
-            // Copia o texto
-            navigator.clipboard.writeText(content)
-                .then(() => {
-                    showToast();
-                    playClickSound();
-                })
-                .catch(err => {
-                    console.error('Erro ao copiar: ', err);
-                });
-        }
-
-        function showToast() {
-            const toast = document.getElementById('toast');
-            toast.classList.add('show');
-            setTimeout(() => {
-                toast.classList.remove('show');
-            }, 2000);
-        }
-
-        function playClickSound() {
-            const sound = document.getElementById('clickSound');
-            sound.currentTime = 0;
-            sound.play().catch(err => console.warn("Som bloqueado até interação do usuário."));
-        }
-
-        // Garante que o :active funcione no iOS
-        document.addEventListener("touchstart", function () { }, true);
-    </script>
-
+  <script type="module" src="firebase-config.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
-
 </html>
