--- a/index19-mddf892.html
+++ b/index19-mddf892.html
@@ -10,7 +10,7 @@
   <div class="section">
     <div class="content">
       <h1>Presença no Viradão</h1>
-      <h3>Presença no Viradão</h3>
+      <h3>Copie o código e cole no formulário</h3>
       <p id="codigoid">xrF8T1xH8GPHfs2oiQZ1ivs06dX4ukV5s6f</p>
 
       <div class="button">
