--- a/index8-sdfsd8f.html
+++ b/index8-sdfsd8f.html
@@ -9,7 +9,7 @@
 <body>
   <div class="section">
     <div class="content">
-      <h1>05/07 – Desmontar Connect + Cumprir Horário</h1>
+      <h1>05/07 – Desmontar Connect</h1>
       <h3>Copie o código e cole no formulário</h3>
       <p id="codigoid">t2TFcFUYC00J3E7i37QSE63DgbfyMgAgPhg</p>
 
