--- a/index9-8sd7f.html
+++ b/index9-8sd7f.html
@@ -9,7 +9,7 @@
 <body>
   <div class="section">
     <div class="content">
-      <h1>06/07 – Front Line</h1>
+      <h1>04/07 Montar estrutura do Connect</h1>
       <h3>Copie o código e cole no formulário</h3>
       <p id="codigoid">wIcSycstISV2fTnIYoPin8Xq3AwvvbxuF8C</p>
 
