--- a/index9-8sd7f.html
+++ b/index9-8sd7f.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>06/07 – Front Line</title>
+  <title>04/07 Montar estrutura do Connect</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
