--- a/index9-8sd7f.html
+++ b/index9-8sd7f.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>04/07 Montar estrutura do Connect</title>
+  <title>04/07 - Montar estrutura do Connect</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="section">
     <div class="content">
-      <h1>04/07 Montar estrutura do Connect</h1>
+      <h1>04/07 - Montar estrutura do Connect</h1>
       <h3>Copie o código e cole no formulário</h3>
       <p id="codigoid">wIcSycstISV2fTnIYoPin8Xq3AwvvbxuF8C</p>
 
