--- a/index12-sdf7sd.html
+++ b/index12-sdf7sd.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Treinamentos</title>
+  <title>05/07 - Treinamentos</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="section">
     <div class="content">
-      <h1>Treinamentos</h1>
+      <h1>05/07 - Treinamentos</h1>
       <h3>Copie o código e cole no formulário</h3>
       <p id="codigoid">mvsx8vZ6HPf8sHwvOSHGrG1vD9ia82CnXB6</p>
 
