--- a/index3-23wer2.html
+++ b/index3-23wer2.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>22/06 – Front Line</title>
+  <title>22/06 – EDP</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="section">
     <div class="content">
-      <h1>22/06 – Front Line</h1>
+      <h1>22/06 – EDP</h1>
       <h3>Copie o código e cole no formulário</h3>
       <p id="codigoid">4s66a5KTnieBJvQkr4Xlp9kyl0FVCGzMBow</p>
 
